--- a/documentation/docs/concepts/queries.mdx
+++ b/documentation/docs/concepts/queries.mdx
@@ -5,7 +5,8 @@ title: Queries
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-The core of `nestjs-query` is the `Query`, it is used by both `@nestjs-query/query-graphql`, `@nestjs-query/query-typeorm` and `@nestjs-query/query-sequelize`.
+The core of `nestjs-query` is the `Query`, it is used by `@nestjs-query/query-graphql`, `@nestjs-query/query-typeorm`
+ `@nestjs-query/query-sequelize` and `@nestjs-query/query-mongoose`.
 
 The query interface contains three optional fields.
 
