docs(): Fix broken assembler links

--- a/documentation/docs/graphql/resolvers.mdx
+++ b/documentation/docs/graphql/resolvers.mdx
@@ -99,7 +99,9 @@ Resolvers work the same as they do in [`@nestjs/graphql`](https://docs.nestjs.co
 your class with `@Resolver`.
 
 :::note
- In this example the DTO and entity are the same shape, if you have a case where they are different or have computed fields check out [Assemblers](../concepts/assemblers.mdx) to understand how to convert to and from the DTO/Entity.
+ In this example the DTO and entity are the same shape, if you have a case where they are different or have computed
+ fields check out [Assemblers](../concepts/advanced/assemblers.mdx) to understand how to convert to and from the
+ DTO/Entity.
 :::
 
 ```ts title="todo-item.resolver.ts"
