--- a/documentation/docs/persistence/services.mdx
+++ b/documentation/docs/persistence/services.mdx
@@ -219,7 +219,10 @@ The above resolver is an example of manually defining the resolver, if you use t
 :::
 
 :::note
-In the above example the DTO and entity are the same shape, if you have a case where they are different or have computed fields check out [Assemblers](../concepts/assemblers.mdx) to understand how to convert to and from the DTO/Entity.
+In the above example the DTO and entity are the same shape, if you have a case where they are different or have
+computed fields check out [Assemblers](../concepts/advanced/assemblers.mdx) to understand how to convert to and from
+the
+DTO/Entity.
 :::
 
 ## Querying
