docs(): Fix typo

--- a/documentation/docs/graphql/resolvers.mdx
+++ b/documentation/docs/graphql/resolvers.mdx
@@ -1118,7 +1118,7 @@ export class TodoItemResolver extends CRUDResolver(TodoItemDTO, {
 </TabItem>
 </Tabs>
 
-### Override Enpoint Name
+### Override Endpoint Name
 
 If you find yourself in a situation where you want to override an endpoint name you can use the `one.name` or `many.name` options to override
 
