docs(): Doc enhancements for services and contributing

--- a/documentation/docs/persistence/services.mdx
+++ b/documentation/docs/persistence/services.mdx
@@ -12,6 +12,8 @@ The following ORMs are supported out of the box.
 * [Sequelize](./sequelize/getting-started.md)
 * [Mongoose](./mongoose/getting-started.md)
 
+`@nestjs-query/core` also provides a number of base `QueryService`s that can be used to create custom query services.
+ [See the Services docs](../concepts/services.md#service-helpers)
 
 All examples assume the following entity.
 
