Doc fix: quote position

--- a/documentation/docs/graphql/relations.mdx
+++ b/documentation/docs/graphql/relations.mdx
@@ -11,7 +11,7 @@ When using the `nestjs-query` you can specify relations that should be exposed f
     * a single value (one-to-one, many-to-one)
     * an array of values that should use `OFFSET` or `NONE` paging.
 * `@Connection` - A connection that represents a collection that should use `cursor` based pagination. (e.g, many-to-many, one-to-many)
-* `@FilterableRelation` - Same as the `@RelationDecorator` but also enables filtering on the relation.
+* `@FilterableRelation` - Same as the `@Relation` Decorator but also enables filtering on the relation.
 * `@FilterableConnection` - Same as `@Connection` but also enables filtering on the relation.
 
 :::warning
